<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">MyShareBox</string>
    <string name="action_settings">Settings</string>
    <string name="empty" translatable="false"></string>
    <string name="remove">Remove</string>
    <string name="clear_list">Clear all</string>
    <string name="state_pending">Pending</string>
    <string name="state_completed">Completed</string>
    <string name="state_accepted">Accepted</string>
    <string name="state_downloading">Loading</string>
    <string name="state_aborted">Aborted</string>
    <string name="title_activity_pending_dialog">Transmission request</string>
    <string name="title_activity_download">Archive</string>
    <string name="title_activity_sharewith">MyShareBox</string>
    
    <string name="button_accept">Accept</string>
    <string name="button_reject">Reject</string>
    <string name="hint_no_handler_for_type">There is no application for this file installed.</string>
    
    <string name="content_neighbor_icon">Neighbor icon</string>
    <string name="list_no_neighbors">No neighbors available.</string>
    <string name="list_no_downloads">No downloads</string>
    <string name="list_no_files">No files</string>
    
    <string name="item_download_title">Transmission #%1$d (%2$s)</string>
    <string name="item_download_text">%1$s</string>
    <string name="item_download_side">%1$s</string>
    
    <string name="item_file_title">%1$d</string>
    <string name="item_file_text">%1$s</string>
    <string name="listitem_multi_title">Select Items</string>

    <string name="select_destination_text" translatable="false">Destination</string>
    <string name="select_destination_edittext" translatable="false">dtn://</string>
    <string name="select_destination_edittext2" translatable="false">Unique ID</string>
    <string name="select_destination_button_send" translatable="false">SEND</string>
    <string name="select_destination_button_dbtest" translatable="false">Insert</string>
    <string name="select_destination_button_dbtest2" translatable="false">Get all</string>
    <string name="select_destination_button_dbtest3" translatable="false">Delete all</string>
    <string name="select_destination_button_dbtest4" translatable="false">POST message</string>

    <string name="team_id_text" translatable="false">team_id: </string>
    <string name="user_id_text" translatable="false">user_id: </string>
    <string name="eid_text" translatable="false">eid: </string>
    <string name="real_name_text" translatable="false">real_name: </string>


    <plurals name="listitem_multi_subtitle">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>

</resources>
